# Bosch-BME680

./: CMakeLists.txt  readme.md
src/bme68x/: bme68x.c
src/bsec_iot_example/: bsec_integration.c  bsec_integration.h  bsec_iot_example.c  bsec_iot_example.ino
src/config/: Selectivity_Config.c  Selectivity_Config.h
